...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:text="samwolde" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:text="1234" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ripple_effect_accent"
                android:text="Sign In"
                android:onClick="login"
                android:textColor="@color/textdark" />

            <TextView
                android:id="@+id/login_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
...
