<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ContactView">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_task_set_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_anchor="@+id/task_set_list"
        app:layout_anchorGravity="right|bottom"
        app:srcCompat="@drawable/ic_add_icon" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/task_set_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_task_set">

    </android.support.v7.widget.RecyclerView>
</android.support.design.widget.CoordinatorLayout>
